From 9eb2a00 (master):
=====================

In prisim/__init__.py,

(*) Update PRISim version

From fa5a832 (master):
=====================

(*) `git rm -r main` folder from the repository

From d3592b0 (closure-adv):
==========================

In prisim/examples/codes/BispectrumPhase/,

(*) Update *.ipynb codes corresponding to the bispectrum phase data
analysis demo paper

From b3cbcec (closure-adv):
==========================

In prisim/examples/codes/BispectrumPhase/,

(*) Update *.ipynb codes corresponding to the bispectrum phase math
paper

From cf6f5df (parabolic-cylinder):
=================================

(*) In member function duplicate_measurements() of class
InterferometerArray, simplify the process to add a missing baseline
label key

From eba5016 (parabolic-cylinder):
=================================

In prisim/interferometry.py,

(*) In __init__() member function of class InterferometerArray, accept
input labels as a numpy array, and convert if it is a list to a numpy
recArray using datatype of antenna labels in attribute layout
(*) In member function duplicate_measurements() of class
InterferometerArray, do more rigorous type checking of baseline labels
to avoid bugs due to slight mismatch in datatypes, avoid type
promotion errors, and append without errors
(*) In member function save() of class InterferometerArray, determine
baseline label datatypes from antenna label datatypes instead of
finding max string length because the latter may be a smaller string
if some baselines have been skipped

From 01ca9c4 (parabolic-cylinder):
=================================

In prisim/interferometry.py,

(*) Remove some commented lines in member function observe() of class
InterferometerArray

In scripts/run_prisim.py,

(*) Pass whole skymodel instead of only a subset in call to observe()
member function of class InterferometerArray when the MPI chunking is
based on frequency

From 11698dd (parabolic-cylinder):
=================================
